fix : overflow

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -81,8 +81,10 @@ html {
 }
 
 body {
-  background: var(--white);
+  background: red;
+  /* background: var(--white); */
   overflow-x: hidden;
+  width: 100vw;
 }
 
 ::-webkit-scrollbar {
